# weresocool_fft

./: Cargo.toml  README.md  justfile
src/: helpers.rs  lib.rs  main.rs  mel.rs  simple.socool  test_fft.rs  test_mel.rs  wsc_fft.rs  wsc_fft_rust_fft.rs
