[package]
name = "weresocool_fft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hound = "3.5.0"
weresocool_double_buffer = { path = "../weresocool_double_buffer" } 
num-complex = "0.4.3"
num-traits = "0.2.15"
once_cell = "1.18.0"
plotters = "0.3.5"
rustfft = "6.1.0"
crossbeam-channel = "0.5.8"
ringbuf = "0.3.3"
